[gd_scene load_steps=6 format=3 uid="uid://ijw5edjyug2"]

[ext_resource type="Script" path="res://code/misc/attack/attack.gd" id="1_wxt8w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mln00"]
size = Vector3(0.0445557, 4.68203, 1.15149)

[sub_resource type="Animation" id="Animation_qgxye"]
resource_name = "BaseAttack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.221825, 0, 0.491665), Vector3(0.0916172, 0, 0.491665)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5708, -0.737402, 0), Vector3(1.5708, 0.563497, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("BoxShape3D_mln00")]
}

[sub_resource type="Animation" id="Animation_eod5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.221825, 0, 0.491665)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, -0.737402, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("BoxShape3D_mln00")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6foy"]
_data = {
"BaseAttack": SubResource("Animation_qgxye"),
"RESET": SubResource("Animation_eod5w")
}

[node name="Attack" type="Node3D"]
script = ExtResource("1_wxt8w")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 6
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(0.740218, -0.672367, 2.43396e-06, 0, -3.61999e-06, -1, 0.672367, 0.740218, -2.67958e-06, -0.221825, 0, 0.491665)
shape = SubResource("BoxShape3D_mln00")

[node name="AttackAnimation" type="AnimationPlayer" parent="HitBox"]
libraries = {
"": SubResource("AnimationLibrary_w6foy")
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
